# rgbd-school

./: README.md
active_obj_modeling/: CMakeLists.txt  manifest.xml
active_obj_modeling/include/active_obj_modeling/: baxterContinuousTrajSender.h  collisionChecking.h  continuousTrajSender.h  diffingConnComps.h  freeFlyingCameraContinuousTrajSender.h  marvinContinuousTrajSender.h  onlineActiveModeler.h  onlineModeler.h  polyhedronApproximationWithSpheres.h  robotMeshSimplification.h
active_obj_modeling/include/active_obj_modeling/progressiveMeshes/: MxTimer.h  matrix.h  quadrics.h
active_obj_modeling/src/: activeModelingDriver.cpp  baxterContinuousTrajSender.cpp  buildMapOnMarvin.cpp  collisionChecking.cpp  continuousTrajSender.cpp  diffingConnComps.cpp  freeFlyingCameraContinuousTrajSender.cpp  highlightSegmentForIcra14Video.cpp  locateMostMovingAreaInVideo.cpp  locateMostMovingAreaInVideoZachFlow.cpp  marvinContinuousTrajSender.cpp  onlineActiveModeler.cpp  onlineActiveModelerREADME.txt  onlineModeler.cpp  polyhedronApproximationWithSpheres.cpp  processHumanSegmDemo.cpp  robotMeshSimplification.cpp
active_obj_modeling/src/tests/: testCHOMP.cpp  testModelerMemLeak.cpp  testMultipleStreamsMultipleTerminals.cpp  testPCLNormals.cpp  testPIMLinking.cpp
flow_slam/: CMakeLists.txt  mainpage.dox  manifest.xml
flow_slam/src/: dficpBasedSLAM.cpp  icpBasedVO.cpp  sceneFlowBasedSLAM.cpp  sceneFlowBasedSLAMFrame2Map.cpp  viewFlowSLAMResultsAsFrames.cpp
joint_inference/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
joint_inference/include/joint_inference/: sceneMatchingCRF.h  sceneMatchingMLN.h
joint_inference/mlntest-inf6/: alchemy.out  domain.mln  evidence.db
joint_inference/scripts/: runAlchemy.pl
joint_inference/src/: calculateAlchemyOutputAccuracy.cpp  createGTEvidenceForMLNLearning.cpp  mlntests.cpp  parseAlchemyOutputClusterSizes.cpp  reconstructObjsAfterInference.cpp  sceneMatchingCRF.cpp  sceneMatchingMLN.cpp  visualizeAlchemyResults.cpp  visualizeFastinfResults.cpp
scene_rendering/: CMakeLists.txt  mainpage.dox  manifest.xml
scene_rendering/include/scene_rendering/: castRaysIntoSurfels.h  castRaysIntoSurfels.ipp  pointCloudRenderer.h  sceneRenderingCache.h  sceneSampler.h  sceneSamplerCUDARenderedTSDF.h  sceneSamplerImages.h  sceneSamplerMesh.h  sceneSamplerPointCloud.h  sceneSamplerRenderedTSDF.h  sceneSamplerSurfels.h  sceneSamplerVoxels.h  surfelCloudRenderer.h  triangulatedMeshRenderer.h  viewScoringRenderer.h  voxelGridRenderer.h  voxelGridSceneInfo.h
scene_rendering/src/: castRaysIntoSurfels.cpp  castRaysIntoSurfels.cu  pointCloudRenderer.cpp  sceneRenderingCache.cpp  sceneSamplerCUDARenderedTSDF.cu  sceneSamplerImages.cpp  sceneSamplerPointCloud.cpp  sceneSamplerRenderedTSDF.cpp  surfelCloudRenderer.cpp  triangulatedMeshRenderer.cpp  viewScoringRenderer.cpp  viewScoringRenderer.cu  voxelGridRenderer.cpp  voxelGridSceneInfo.cpp
scene_rendering/src/tests/: testPointCloudRenderer.cpp  testglstuff.cpp  testglstuff2.cpp
